--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">GreenCare</string>
+    <string name="green_world_with_greencare">Green World with GreenCare</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign In</string>
+    <string name="not_registered_sign_up_here">Not registered? Sign up here</string>
+    <string name="back_to_home">Back to Home</string>
 </resources>
