--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="sign_in">Sign In</string>
     <string name="not_registered_sign_up_here">Not registered? Sign up here</string>
     <string name="back_to_home">Back to Home</string>
+    <string name="classify">Classify</string>
+    <string name="choose_image">Choose Image</string>
+    <string name="name">Name</string>
+    <string name="account_details">Account Details</string>
+    <string name="contact_number">Contact Number</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="hello">Hello,</string>
 </resources>
